--- a/welcome.html
+++ b/welcome.html
@@ -120,11 +120,11 @@
                                 <div id="submenu-2" class="collapse submenu" style="">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="pages/cards.html">User Create
+                                            <a class="nav-link" href="user-create.html">User Create
                                                 <span class="badge badge-secondary">New</span></a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="pages/general.html">Project Create</a>
+                                            <a class="nav-link" href="project-create.html">Project Create</a>
                                         </li>
 
                                     </ul>
@@ -137,10 +137,10 @@
                                 <div id="submenu-3" class="collapse submenu" style="">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="pages/chart-c3.html">Task Create</a>
+                                            <a class="nav-link" href="task-create.html">Task Create</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="pages/chart-chartist.html">Project Status</a>
+                                            <a class="nav-link" href="project-status.html">Project Status</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -152,10 +152,10 @@
                                 <div id="submenu-4" class="collapse submenu" style="">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="pages/form-elements.html">Pending Tasks</a>
+                                            <a class="nav-link" href="pending-task.html">Pending Tasks</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="pages/form-validation.html">Archive</a>
+                                            <a class="nav-link" href="archive.html">Archive</a>
                                         </li>
                                     </ul>
                                 </div>
