user create page style copied

--- a/user-create.html
+++ b/user-create.html
@@ -191,18 +191,25 @@
     <div class="dashboard-wrapper">
         <div class="dashboard-ecommerce">
             <div class="container-fluid dashboard-content">
+                <div class="row">
+                    <div class="col-lg-12">
                 <!-- ============================================================== -->
                 <!-- pageheader  -->
                 <!-- ============================================================== -->
-
+                        <div class="row">
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                <div class="page-header" id="top">
+                                    <h2 class="pageheader-title">User Create</h2>
+                                </div>
+                            </div>
+                        </div>
                 <!-- ============================================================== -->
                 <!-- end pageheader  -->
                 <!-- ============================================================== -->
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- ============================================================== -->
-
-        <!-- ============================================================== -->
     </div>
     <!-- ============================================================== -->
     <!-- end wrapper  -->
@@ -210,6 +217,7 @@
 </div>
 <!-- ============================================================== -->
 <!-- end main wrapper  -->
+
 <!-- ============================================================== -->
 <!-- Optional JavaScript -->
 <!-- jquery 3.3.1 -->
