--- a/user-create.html
+++ b/user-create.html
@@ -329,10 +329,10 @@
                                         <td>Employee</td>
                                         <td>
                                             <a href="#">
-                                                <button value="update" class="btn btn-warning btn-sm" >Update</button>
+                                                <button value="update" class="btn btn-warning btn-sm">Update</button>
                                             </a>
                                             <a href="#">
-                                                <button  value="delete" class="btn btn-danger btn-sm" >Delete</button>
+                                                <button value="delete" class="btn btn-danger btn-sm">Delete</button>
                                             </a>
                                         </td>
                                     </tr>
@@ -344,10 +344,10 @@
                                         <td>Manager</td>
                                         <td>
                                             <a href="#">
-                                                <button value="update" class="btn btn-warning btn-sm" >Update</button>
+                                                <button value="update" class="btn btn-warning btn-sm">Update</button>
                                             </a>
                                             <a href="#">
-                                                <button  value="delete" class="btn btn-danger btn-sm" >Delete</button>
+                                                <button value="delete" class="btn btn-danger btn-sm">Delete</button>
                                             </a>
                                     </tr>
                                     <tr>
@@ -358,10 +358,10 @@
                                         <td>Admin</td>
                                         <td>
                                             <a href="#">
-                                                <button value="update" class="btn btn-warning btn-sm" >Update</button>
+                                                <button value="update" class="btn btn-warning btn-sm">Update</button>
                                             </a>
                                             <a href="#">
-                                                <button  value="delete" class="btn btn-danger btn-sm" >Delete</button>
+                                                <button value="delete" class="btn btn-danger btn-sm">Delete</button>
                                             </a>
                                         </td>
                                     <tr>
@@ -372,10 +372,10 @@
                                         <td>Manager</td>
                                         <td>
                                             <a href="#">
-                                                <button value="update" class="btn btn-warning btn-sm" >Update</button>
+                                                <button value="update" class="btn btn-warning btn-sm">Update</button>
                                             </a>
                                             <a href="#">
-                                                <button  value="delete" class="btn btn-danger btn-sm" >Delete</button>
+                                                <button value="delete" class="btn btn-danger btn-sm">Delete</button>
                                             </a>
                                         </td>
                                     <tr>
@@ -386,10 +386,10 @@
                                         <td>Employee</td>
                                         <td>
                                             <a href="#">
-                                                <button value="update" class="btn btn-warning btn-sm" >Update</button>
+                                                <button value="update" class="btn btn-warning btn-sm">Update</button>
                                             </a>
                                             <a href="#">
-                                                <button  value="delete" class="btn btn-danger btn-sm" >Delete</button>
+                                                <button value="delete" class="btn btn-danger btn-sm">Delete</button>
                                             </a>
                                         </td>
                                     </tr>
@@ -409,6 +409,9 @@
     <!-- end main wrapper  -->
 
     <!-- ============================================================== -->
+
+</div>
+
     <!-- Optional JavaScript -->
     <!-- jquery 3.3.1 -->
     <script src="assets/vendor/jquery/jquery-3.3.1.min.js"></script>
