--- a/project-create.html
+++ b/project-create.html
@@ -237,7 +237,7 @@
 
                                         <div class="form-group col-6">
 
-                                                <label for="assignedmanager">Assigned Manafer</label>
+                                                <label for="assignedmanager">Assigned Manager</label>
                                                 <select class="custom-select" id="assignedmanager" required="">
                                                     <option value="none" selected disabled>Select</option>
                                                     <option>Delissa Norre</option>
@@ -304,7 +304,7 @@
                                         <th scope="col">Project Name</th>
                                         <th scope="col">Start-End Date</th>
                                         <th scope="col">Manager</th>
-                                        <th scope="col">Status/th>
+                                        <th scope="col">Status</th>
                                         <th scope="col">Action</th>
                                     </tr>
                                     </thead>
