--- a/archive.html
+++ b/archive.html
@@ -231,14 +231,19 @@
                 </div>
             </div>
         </div>
+
         <!-- ============================================================== -->
         <!-- end wrapper  -->
         <!-- ============================================================== -->
     </div>
+    <footer class="page footer font-small blue fixed-botoom">
+        <div class="footer-copyright text-center py-3">© 2022 Cydeo – All Rights Reserve</div>
+    </footer>
     <!-- ============================================================== -->
     <!-- end main wrapper  -->
 
     <!-- ============================================================== -->
+
 
 </div>
 
