--- a/task-create.html
+++ b/task-create.html
@@ -374,6 +374,9 @@
         <!-- end wrapper  -->
         <!-- ============================================================== -->
     </div>
+    <footer class="page footer font-small blue fixed-botoom">
+        <div class="footer-copyright text-center py-3">© 2022 Cydeo – All Rights Reserve</div>
+    </footer>
     <!-- ============================================================== -->
     <!-- end main wrapper  -->
 
