--- a/welcome.html
+++ b/welcome.html
@@ -204,6 +204,9 @@
 
         <!-- ============================================================== -->
     </div>
+    <footer class="page footer font-small blue fixed-botoom">
+        <div class="footer-copyright text-center py-3">© 2022 Cydeo – All Rights Reserve</div>
+    </footer>
     <!-- ============================================================== -->
     <!-- end wrapper  -->
     <!-- ============================================================== -->
